--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,29 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.luz {
+    width: 50px;
+    height: 50px;
+    /* border: 5px solid blue; */
+    display: inline-block;
+    text-align: center;
+}
+
+.verde {
+    background-color: green;
+    margin: 2px;
+}
+
+.ambar {
+    background-color: orange;
+    margin: 2px;
+}
+
+.rojo {
+    background-color: red;
+    margin: 2px;
+}
+
+.encendido {
+    box-shadow: 2px 2px 2px 2px rgb(248, 248, 114);
+}
